<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/ins1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instruction1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:textColor="@android:color/black"/>
    <Button
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Yes" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="leftClick"/>
    <Button
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/No" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="rightClick"/>
    <TextView
            android:text="@string/guessed_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/points" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textColor="@android:color/black"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/primeView" android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/instruction1" android:textSize="36sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"
            android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/errors_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errors"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/points" android:textColor="@android:color/black"/>

    <TextView
            android:text="@string/ins2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instruction2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/instruction1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"/>

    <TextView
            android:text="@string/ins3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instruction3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/instruction2"
            android:textColor="@android:color/black"/>
</android.support.constraint.ConstraintLayout>